--- a/Async-JSP-PDF-Project/pom.xml
+++ b/Async-JSP-PDF-Project/pom.xml
@@ -56,6 +56,11 @@
         <artifactId>pdfbox</artifactId>
         <version>2.0.28</version> 
     </dependency>   	
+    <dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>pdfbox</artifactId>
+        <version>2.0.28</version> 
+    </dependency>
   </dependencies>
 
   <build>
