--- a/Async-JSP-PDF-Project/pom.xml
+++ b/Async-JSP-PDF-Project/pom.xml
@@ -38,7 +38,15 @@
         <version>4.0.1</version>
         <scope>provided</scope>
     </dependency>
-
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>5.2.5</version> </dependency>
+    <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-scratchpad</artifactId>
+    <version>5.2.5</version>
+</dependency>
     <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>jstl</artifactId>
